# dailybriefer

./: .gitignore  DEMO.md  DEPLOY_AS_WEBPAGE.md  EXAMPLE_OUTPUT.md  FILTERING_RULES_EXPLAINED.md  FINANCIAL_SOURCES_ADDED.md  FIXES_APPLIED.md  HTML_OUTPUT.md  IMPLEMENTATION_NOTES.md  QUICKSTART.md  README.md  SECTIONED_BRIEF_IMPLEMENTED.md  generate_brief.sh  pyproject.toml  requirements.txt  view_brief.sh
.github/workflows/: daily-brief.yml
config/: feeds.yaml  settings.yaml
docs/: brief.md  index.html
output/: brief.html
src/: __init__.py  cluster.py  ingest.py  main.py  models.py  rank.py  render.py  render_html.py  store.py  utils.py
tests/: __init__.py  test_models.py  test_utils.py
